--- a/src/Windows.Core/Windows.Core.csproj
+++ b/src/Windows.Core/Windows.Core.csproj
@@ -43,12 +43,12 @@
     <Compile Include="IMAGE_SECTION_HEADER+CharacteristicsType.cs" />
     <Compile Include="IMAGE_SECTION_HEADER.cs" />
     <Compile Include="LIST_ENTRY.cs" />
-    <Compile Include="NTStatus+Code.cs" />
-    <Compile Include="NTStatus+SeverityCode.cs" />
-    <Compile Include="NTStatus+FacilityCode.cs" />
+    <Compile Include="NTSTATUS+Code.cs" />
+    <Compile Include="NTSTATUS+SeverityCode.cs" />
+    <Compile Include="NTSTATUS+FacilityCode.cs" />
     <Compile Include="NullableUInt32.cs" />
     <Compile Include="NullableGuid.cs" />
-    <Compile Include="NTStatus.cs" />
+    <Compile Include="NTSTATUS.cs" />
     <Compile Include="PInvokeExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Win32ErrorCode.cs" />
