--- a/src/NTDll/NTDll.csproj
+++ b/src/NTDll/NTDll.csproj
@@ -33,10 +33,12 @@
       <Project>{1387e009-7086-4572-ac8d-ce4242adec77}</Project>
       <Name>CodeGenerationAttributes</Name>
       <Private>False</Private>
+      <ExcludeFromNuPkg>true</ExcludeFromNuPkg>
     </ProjectReference>
     <ProjectReference Include="..\CodeGeneration\CodeGeneration.csproj">
       <Project>{C1815471-02AF-4BB9-8D83-652ADBAFF5B6}</Project>
       <Name>CodeGeneration</Name>
+      <ExcludeFromNuPkg>true</ExcludeFromNuPkg>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
     <ProjectReference Include="..\Windows.Core\Windows.Core.csproj">
