--- a/src/NCrypt/NCrypt.csproj
+++ b/src/NCrypt/NCrypt.csproj
@@ -23,7 +23,23 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="NCrypt+InterfaceIdentifiers.cs" />
+    <Compile Include="NCrypt+NCryptKeyDerivationFlags.cs" />
+    <Compile Include="NCrypt+NCryptOpenKeyFlags.cs" />
+    <Compile Include="NCrypt+NCryptEnumKeysFlags.cs" />
+    <Compile Include="NCrypt+NCryptEnumStorageProvidersFlags.cs" />
+    <Compile Include="NCrypt+NCryptIsAlgSupportedFlags.cs" />
+    <Compile Include="NCrypt+AlgorithmOperations.cs" />
     <Compile Include="NCrypt+AsymmetricKeyBlobTypes.cs" />
+    <Compile Include="NCrypt+NCryptAlgorithmName.cs" />
+    <Compile Include="NCrypt+NCryptDeriveKeyFlags.cs" />
+    <Compile Include="NCrypt+NCryptEnumAlgorithmsFlags.cs" />
+    <Compile Include="NCrypt+NCryptKeyName.cs">
+      <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
+    </Compile>
+    <Compile Include="NCrypt+NCryptProviderName.cs" />
+    <Compile Include="NCrypt+NCryptSecretAgreementFlags.cs" />
+    <Compile Include="NCrypt+NCryptDeleteKeyFlags.cs" />
     <Compile Include="NCrypt+NCryptSignHashFlags.cs" />
     <Compile Include="NCrypt+BufferType.cs" />
     <Compile Include="NCrypt+LegacyKeySpec.cs" />
@@ -47,6 +63,7 @@
     <Compile Include="NCrypt+NCRYPT_SUPPORTED_LENGTHS.cs" />
     <Compile Include="NCrypt+SafeKeyHandle.cs" />
     <Compile Include="NCrypt+SafeProviderHandle.cs" />
+    <Compile Include="NCrypt+SafeSecretHandle.cs" />
     <Compile Include="NCrypt+SECURITY_STATUS.cs" />
     <Compile Include="NCrypt+SymmetricKeyBlobTypes.cs" />
     <Compile Include="NCrypt.cs">
