--- a/src/BCrypt.Tests/BCrypt.Tests.csproj
+++ b/src/BCrypt.Tests/BCrypt.Tests.csproj
@@ -31,7 +31,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BCrypt.cs" />
+    <Compile Include="BCryptFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
