--- a/src/DbgHelp.Tests/DbgHelp.Tests.csproj
+++ b/src/DbgHelp.Tests/DbgHelp.Tests.csproj
@@ -31,7 +31,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DbgHelp.cs" />
+    <Compile Include="DbgHelpFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
