--- a/src/NTDll.Tests/NTDll.Tests.csproj
+++ b/src/NTDll.Tests/NTDll.Tests.csproj
@@ -31,7 +31,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NTDll.cs" />
+    <Compile Include="NTDllFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
