--- a/src/Psapi.Tests/Psapi.Tests.csproj
+++ b/src/Psapi.Tests/Psapi.Tests.csproj
@@ -31,7 +31,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Psapi.cs" />
+    <Compile Include="PsapiFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
