--- a/src/SetupApi.Tests/SetupApi.Tests.csproj
+++ b/src/SetupApi.Tests/SetupApi.Tests.csproj
@@ -12,7 +12,8 @@
     <ProjectGuid>{05468C6E-B6EB-45E9-9F3D-66207D9EFD41}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <AssemblyName>PInvoke.SetupApi.Tests</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
@@ -30,7 +31,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SetupApi.cs" />
+    <Compile Include="SetupApiFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
