--- a/src/Hid.Tests/Hid.Tests.csproj
+++ b/src/Hid.Tests/Hid.Tests.csproj
@@ -31,7 +31,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Hid.cs" />
+    <Compile Include="HidFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
