--- a/src/NCrypt.Tests/NCrypt.Tests.csproj
+++ b/src/NCrypt.Tests/NCrypt.Tests.csproj
@@ -32,9 +32,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="NCryptFacts.cs" />
-    <Compile Include="NCryptExtensionsTests.cs" />
+    <Compile Include="NCryptExtensionsFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SecurityStatusExceptionTests.cs" />
+    <Compile Include="SecurityStatusExceptionFacts.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
