Add code gen for friendly struct* parameters
Fix SetupApi enumerator helper so it doesn't require the caller to fix the pointer for entire enumeration.

--- a/src/CodeGenerationAttributes.Net40/CodeGenerationAttributes.Net40.csproj
+++ b/src/CodeGenerationAttributes.Net40/CodeGenerationAttributes.Net40.csproj
@@ -31,6 +31,9 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\CodeGenerationAttributes\IsArrayAttribute.cs">
+      <Link>IsArrayAttribute.cs</Link>
+    </Compile>
     <Compile Include="..\CodeGenerationAttributes\OfferFriendlyOverloadsAttribute.cs">
       <Link>OfferFriendlyOverloadsAttribute.cs</Link>
     </Compile>
