Make optional pointer parameters easier
Codegen optional structs now uses Nullable<T> instead of ref where only input value is important

--- a/src/CodeGeneration/CodeGeneration.csproj
+++ b/src/CodeGeneration/CodeGeneration.csproj
@@ -30,6 +30,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\CodeGenerationAttributes.Shared\FriendlyFlags.cs">
+      <Link>FriendlyFlags.cs</Link>
+    </Compile>
     <Compile Include="OfferFriendlyOverloadsGenerator.cs" />
     <Compile Include="OfferIntPtrPropertyAccessorsGenerator.cs" />
   </ItemGroup>
