--- a/src/UxTheme.Desktop/UxTheme.Desktop.csproj
+++ b/src/UxTheme.Desktop/UxTheme.Desktop.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UxTheme+SafeThemeHandle.cs" />
     <Compile Include="UxTheme.cs" />
     <Compile Include="UxTheme.Helpers.cs" />
   </ItemGroup>
