--- a/src/Windows.Core/Windows.Core.csproj
+++ b/src/Windows.Core/Windows.Core.csproj
@@ -51,6 +51,7 @@
     <Compile Include="NTSTATUS.cs" />
     <Compile Include="PInvokeExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RECT.cs" />
     <Compile Include="Win32ErrorCode.cs" />
   </ItemGroup>
   <ItemGroup>
