--- a/src/Kernel32.Desktop/Kernel32.Desktop.csproj
+++ b/src/Kernel32.Desktop/Kernel32.Desktop.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Kernel32+PROCESS_INFORMATION.cs" />
     <Compile Include="Kernel32+PROC_THREAD_ATTRIBUTE_LIST.cs" />
     <Compile Include="Kernel32+QueryFullProcessImageNameFlags.cs" />
+    <Compile Include="Kernel32+ResourceTypes.cs" />
     <Compile Include="Kernel32+SafeLibraryHandle.cs" />
     <Compile Include="Kernel32+SECURITY_IMPERSONATION_LEVEL.cs" />
     <Compile Include="Kernel32+SECURITY_ATTRIBUTES.cs" />
