--- a/src/MSCorEE.Tests/MSCorEE.Tests.csproj
+++ b/src/MSCorEE.Tests/MSCorEE.Tests.csproj
@@ -17,12 +17,16 @@
     <AssemblyName>PInvoke.MSCorEE.Tests</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
+    <ResolveComReferenceSilent>true</ResolveComReferenceSilent>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
   </PropertyGroup>
   <ItemGroup>
+    <COMFileReference Include="$(MSBuildProgramFiles32)\Windows Kits\NETFXSDK\4.6.1\Lib\um\x86\metahost.tlb">
+      <EmbedInteropTypes>true</EmbedInteropTypes>
+    </COMFileReference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,6 +44,10 @@
     <ProjectReference Include="..\MSCorEE.Desktop\MSCorEE.Desktop.csproj">
       <Project>{862717F8-F2DF-4DE8-9F03-5A98941B2747}</Project>
       <Name>MSCorEE.Desktop</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Windows.Core\Windows.Core.csproj">
+      <Project>{b08c3c79-4cdd-4d37-933c-07d3452fd5f1}</Project>
+      <Name>Windows.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
