--- a/src/NTDll.Desktop/NTDll.Desktop.csproj
+++ b/src/NTDll.Desktop/NTDll.Desktop.csproj
@@ -45,8 +45,12 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NTDll+UNICODE_STRING.cs" />
-    <Compile Include="NTDll+OBJECT_ATTRIBUTES.cs" />
+    <Compile Include="NTDll+UNICODE_STRING.cs">
+      <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
+    </Compile>
+    <Compile Include="NTDll+OBJECT_ATTRIBUTES.cs">
+      <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
+    </Compile>
     <Compile Include="NTDll.cs">
       <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
     </Compile>
