--- a/src/MSCorEE.Desktop/MSCorEE.Desktop.csproj
+++ b/src/MSCorEE.Desktop/MSCorEE.Desktop.csproj
@@ -41,6 +41,10 @@
       <ExcludeFromNuPkg>true</ExcludeFromNuPkg>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
+    <ProjectReference Include="..\Kernel32.Desktop\Kernel32.Desktop.csproj">
+      <Project>{18ba8c60-9a63-4eea-bb5c-c9899d86f5b8}</Project>
+      <Name>Kernel32.Desktop</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Windows.Core\Windows.Core.csproj">
       <Project>{B08C3C79-4CDD-4D37-933C-07D3452FD5F1}</Project>
       <Name>Windows.Core</Name>
