Use SafeNTObjectHandle instead of IntPtr

--- a/src/NTDll.Desktop/NTDll.Desktop.csproj
+++ b/src/NTDll.Desktop/NTDll.Desktop.csproj
@@ -45,6 +45,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NTDll+SafeNTObjectHandle.cs" />
     <Compile Include="NTDll+UNICODE_STRING.cs">
       <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
     </Compile>
