--- a/src/MSCorEE.Desktop/MSCorEE.Desktop.csproj
+++ b/src/MSCorEE.Desktop/MSCorEE.Desktop.csproj
@@ -25,6 +25,8 @@
       <Visible>false</Visible>
       <EmbedInteropTypes>true</EmbedInteropTypes>
     </COMFileReference>
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
