Add Helpers file that was left out of DwmApi project

--- a/src/DwmApi.Desktop/DwmApi.Desktop.csproj
+++ b/src/DwmApi.Desktop/DwmApi.Desktop.csproj
@@ -48,6 +48,9 @@
     <Compile Include="DwmApi.cs">
       <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
     </Compile>
+    <Compile Include="DwmApi.Helpers.cs">
+      <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
