Add a few more functions and types to DwmApi

--- a/src/DwmApi.Desktop/DwmApi.Desktop.csproj
+++ b/src/DwmApi.Desktop/DwmApi.Desktop.csproj
@@ -23,6 +23,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CodeGenerationAttributes.Net40\CodeGenerationAttributes.Net40.csproj">
@@ -45,12 +46,15 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DwmApi+DwmEnableCompositionFlags.cs" />
+    <Compile Include="DwmApi+DWM_BLURBEHIND.cs" />
     <Compile Include="DwmApi.cs">
       <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
     </Compile>
     <Compile Include="DwmApi.Helpers.cs">
       <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
     </Compile>
+    <Compile Include="DWM_BLURBEHINDFlags.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
