--- a/src/Fusion.Desktop/Fusion.Desktop.csproj
+++ b/src/Fusion.Desktop/Fusion.Desktop.csproj
@@ -8,28 +8,31 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{862717F8-F2DF-4DE8-9F03-5A98941B2747}</ProjectGuid>
+    <ProjectGuid>{A41C96AD-3E4A-4744-AA3D-00FFE07954AD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PInvoke</RootNamespace>
-    <AssemblyName>PInvoke.MSCorEE</AssemblyName>
+    <AssemblyName>PInvoke.Fusion</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <ResolveComReferenceSilent>true</ResolveComReferenceSilent>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
   </PropertyGroup>
   <ItemGroup>
-    <COMFileReference Include="$(MSBuildProgramFiles32)\Windows Kits\NETFXSDK\4.6.1\Lib\um\x86\metahost.tlb">
-      <Visible>false</Visible>
-      <EmbedInteropTypes>true</EmbedInteropTypes>
-    </COMFileReference>
-  </ItemGroup>
-  <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMFileReference Include="$(MSBuildProgramFiles32)\Windows Kits\NETFXSDK\4.6.1\Lib\um\x86\mscoree.tlb">
+      <Visible>false</Visible>
+      <EmbedInteropTypes>true</EmbedInteropTypes>
+    </COMFileReference>
+    <COMFileReference Include="$(MSBuildProgramFiles32)\Windows Kits\NETFXSDK\4.6.1\Lib\um\x86\cordebug.tlb">
+      <Visible>false</Visible>
+      <EmbedInteropTypes>true</EmbedInteropTypes>
+    </COMFileReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CodeGenerationAttributes.Net40\CodeGenerationAttributes.Net40.csproj">
@@ -43,12 +46,8 @@
       <ExcludeFromNuPkg>true</ExcludeFromNuPkg>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
-    <ProjectReference Include="..\Kernel32.Desktop\Kernel32.Desktop.csproj">
-      <Project>{18ba8c60-9a63-4eea-bb5c-c9899d86f5b8}</Project>
-      <Name>Kernel32.Desktop</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Windows.Core\Windows.Core.csproj">
-      <Project>{B08C3C79-4CDD-4D37-933C-07D3452FD5F1}</Project>
+      <Project>{b08c3c79-4cdd-4d37-933c-07d3452fd5f1}</Project>
       <Name>Windows.Core</Name>
     </ProjectReference>
   </ItemGroup>
@@ -56,17 +55,30 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IEnumUnknownExtensions.cs" />
-    <Compile Include="MSCorEE.cs">
+    <Compile Include="Fusion.cs">
       <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
     </Compile>
-    <Compile Include="MSCorEE.Helpers.cs">
+    <Compile Include="Fusion.Helpers.cs">
       <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
     </Compile>
+    <Compile Include="Fusion+AssemblyCacheInstallFlags.cs" />
+    <Compile Include="Fusion+AssemblyInfoFlags.cs" />
+    <Compile Include="Fusion+FusionInstallReferenceFlags.cs" />
+    <Compile Include="Fusion+FUSION_INSTALL_REFERENCE.cs">
+      <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
+    </Compile>
+    <Compile Include="Fusion+IAssemblyCache.cs" />
+    <Compile Include="Fusion+IAssemblyCacheItem.cs" />
+    <Compile Include="Fusion+QueryAssemblyInfoFlags.cs" />
+    <Compile Include="MSCorEE+ASSEMBLY_INFO.cs">
+      <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
+    </Compile>
+    <Compile Include="MSCorEE+UninstallAssemblyFlags.cs" />
+    <Compile Include="MSCorEE+UninstallDisposition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="MSCorEE.exports.txt">
+    <Content Include="Fusion.exports.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
