--- a/src/BCrypt.Desktop/BCrypt.Desktop.csproj
+++ b/src/BCrypt.Desktop/BCrypt.Desktop.csproj
@@ -52,6 +52,7 @@
     <Compile Include="BCrypt.cs">
       <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
     </Compile>
+    <Compile Include="BCrypt+ConfigurationTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
