--- a/src/Fusion.Desktop/Fusion.Desktop.csproj
+++ b/src/Fusion.Desktop/Fusion.Desktop.csproj
@@ -14,6 +14,7 @@
     <RootNamespace>PInvoke</RootNamespace>
     <AssemblyName>PInvoke.Fusion</AssemblyName>
     <FileAlignment>512</FileAlignment>
+    <ResolveComReferenceSilent>true</ResolveComReferenceSilent>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
   </PropertyGroup>
