--- a/src/CodeGenerationAttributes.Profile111/CodeGenerationAttributes.Profile111.csproj
+++ b/src/CodeGenerationAttributes.Profile111/CodeGenerationAttributes.Profile111.csproj
@@ -10,11 +10,11 @@
     <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1386982C-4731-46CD-9444-18E891AECDE0}</ProjectGuid>
+    <ProjectGuid>{05FBA24A-B0F6-4B04-B00F-9AA5ACD191A9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PInvoke</RootNamespace>
-    <AssemblyName>PInvoke.Windows.Core</AssemblyName>
+    <AssemblyName>CodeGenerationAttributes</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -24,24 +24,13 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
+    <!-- A reference to the entire .NET Framework is automatically included -->
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CodeGenerationAttributes.Profile111\CodeGenerationAttributes.Profile111.csproj">
-      <Project>{05fba24a-b0f6-4b04-b00f-9aa5acd191a9}</Project>
-      <Name>CodeGenerationAttributes.Profile111</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CodeGeneration\CodeGeneration.csproj">
-      <Project>{C1815471-02AF-4BB9-8D83-652ADBAFF5B6}</Project>
-      <Name>CodeGeneration</Name>
-      <ExcludeFromNuPkg>true</ExcludeFromNuPkg>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-    </ProjectReference>
+    <Folder Include="Properties\" />
   </ItemGroup>
-  <Import Project="..\Windows.Core.Shared\Windows.Core.Shared.projitems" Label="Shared" />
+  <Import Project="..\CodeGenerationAttributes.Shared\CodeGenerationAttributes.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), EnlistmentInfo.targets))\EnlistmentInfo.targets" Condition=" '$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), EnlistmentInfo.targets))' != '' " />
 </Project>
