Fix P2P refs that were copying portable Kernel32 over desktop Kernel32

--- a/src/AdvApi32.Tests/AdvApi32.Tests.csproj
+++ b/src/AdvApi32.Tests/AdvApi32.Tests.csproj
@@ -39,9 +39,9 @@
       <Project>{9FDFEB7D-0CE6-4946-ADED-3678A9336F3C}</Project>
       <Name>AdvApi32.Desktop</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Kernel32\Kernel32.csproj">
-      <Project>{1fdc092a-d3e8-4cc4-b896-17e0a213f723}</Project>
-      <Name>Kernel32</Name>
+    <ProjectReference Include="..\Kernel32.Desktop\Kernel32.Desktop.csproj">
+      <Project>{18ba8c60-9a63-4eea-bb5c-c9899d86f5b8}</Project>
+      <Name>Kernel32.Desktop</Name>
     </ProjectReference>
     <ProjectReference Include="..\Windows.Core\Windows.Core.csproj">
       <Project>{B08C3C79-4CDD-4D37-933C-07D3452FD5F1}</Project>
