Add two functions and structs for NetApi32

--- a/src/NetApi32.Desktop/NetApi32.Desktop.csproj
+++ b/src/NetApi32.Desktop/NetApi32.Desktop.csproj
@@ -45,6 +45,12 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NetApi32+USER_INFO_1.cs">
+      <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
+    </Compile>
+    <Compile Include="NetApi32+USER_INFO_0.cs">
+      <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
+    </Compile>
     <Compile Include="NetApi32+NetUserEnumFilter.cs" />
     <Compile Include="NetApi32+NetUserEnumLevel.cs" />
     <Compile Include="NetApi32.cs">
