Add SysCommands options for WM_SYSCOMMAND
Change-Id: I14f92956f88a640998171d6f89b65afd6f09a013

--- a/src/User32.Desktop/User32.Desktop.csproj
+++ b/src/User32.Desktop/User32.Desktop.csproj
@@ -35,6 +35,7 @@
     <Compile Include="User32+INPUT.cs" />
     <Compile Include="User32+QueueStatusFlags.cs" />
     <Compile Include="User32+PeekMessageParams.cs" />
+    <Compile Include="User32+SysCommands.cs" />
     <Compile Include="User32+VirtualKey.cs" />
     <Compile Include="User32+ScanCode.cs" />
     <Compile Include="User32+WindowMessage.cs" />
